chore: reorganize JS files

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </main>
     </div>
 
-    <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/vendor/bootstrap.bundle.min.js"></script>
     <script src="js/slider.js"></script>
 </body>
 </html>
