feat: create new collection section

--- a/index.html
+++ b/index.html
@@ -134,7 +134,58 @@
         </main>
     </div>
 
+    <section class="new-collection__section">
+        <div class="container">
+
+            <h2 class="section-title">Новая коллекция</h2>
+            <div class="row">
+                <div class="col-4 shop-item">
+                    <div class="shop-item__image-container">
+                        <a href="" class="link-to-shop">
+                            <img src="img/shop_item1.png" alt="Shop Item 1" class="shop-item__image img-fluid">
+                            <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
+                        </a>
+                    </div>
+                    <h4 class="shop-item__title">Футболка USA</h4>
+                    <p class="shop-item__price"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
+                </div>
+                <div class="col-4 shop-item">
+                    <div class="shop-item__image-container">
+                        <a href="" class="link-to-shop">
+                            <img src="img/shop_item2.png" alt="Shop Item 2" class="shop-item__image img-fluid">
+                            <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
+                        </a>
+                    </div>
+                    <h4 class="shop-item__title">Купальник Glow</h4>
+                    <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
+                </div>
+                <div class="col-4 shop-item">
+                    <div class="shop-item__image-container">
+                        <a href="" class="link-to-shop"></a>
+                            <img src="img/shop_item3.png" alt="Shop Item 3" class="shop-item__image img-fluid">
+                            <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
+                        </a>
+                    </div>
+                    <h4 class="shop-item__title">Свитшот Sweet Shot</h4>
+                    <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
+                </div>
+            </div>
+            
+
+            <div class="row">
+                <div class="offset-4 col-4 d-flex justify-content-center">
+                    <a href="" class="btn shop-button outline-shop-button">
+                        Открыть магазин
+                    </a>
+                </div>
+            </div>
+
+
+        </div>
+    </section>
+
     <script src="js/vendor/bootstrap.bundle.min.js"></script>
-    <script src="js/slider.js"></script>
+    <script src="js/text_slider.js"></script>
+    <script src="js/script_for_sale.js"></script>
 </body>
 </html>
