--- a/index.html
+++ b/index.html
@@ -245,8 +245,19 @@
                 </div>
             </div>
 
-            <div class="dream-team__next swiper-button-next"></div>
-            <div class="dream-team__prev swiper-button-prev"></div>
+            <div class="dream-team__next swiper-button-next">
+                <svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M8.34742e-08 8L28 8M28 8L20.8108 15M28 8L20.8108 1" stroke="black"/>
+                </svg>
+
+            </div>
+            <div class="dream-team__prev swiper-button-prev">
+
+                <svg width="29" height="16" viewBox="0 0 29 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M29 8L0.999999 8M0.999999 8L8.18919 0.999999M0.999999 8L8.18919 15" stroke="black"/>
+                </svg>
+
+            </div>
             <div class="dream-team__pagination swiper-pagination"></div>
             </div>
         </div>
@@ -255,15 +266,12 @@
             <h3 class="dream-team__subtitle">Для каждой</h3>
             <p class="dream-team__text">Каждая девушка уникальна. Однако, мы схожи в миллионе мелочей.</p>
             <p class="dream-team__text">Womazing ищет эти мелочи и создает прекрасные вещи, которые выгодно подчеркивают достоинства каждой девушки.</p>
+            <a href="#" class="dream-team__about-link">Подробнее о бренде</a>
         </div>
         
         </div>
     </div>
     </section>
-
-
-
-
 
 
 
@@ -285,8 +293,8 @@
             type: 'bullets',
         },
         autoplay: {
-        delay: 5000, // 5000 мс = 5 секунд
-        disableOnInteraction: false, // продолжает автопрокрутку даже после ручного переключения
+        delay: 5000, 
+        disableOnInteraction: false, 
         },
         });
     </script>
