--- a/index.html
+++ b/index.html
@@ -274,7 +274,23 @@
     </section>
 
 
+    <footer class="footer">
+        <div class="container">
 
+            <div class="row">
+                <div class="col-3 footer__info">
+                    <div class="footer__logo">
+                        <img src="img/logo.svg" alt="Womazing" class="logo-img footer__logo-img">
+                        <span class="logo-text footer__logo-text">Womazing</span>
+                    </div>
+                    <p class="footer__legal">© Все права защищены</p>
+                    <p class="footer__legal">Политика конфиденциальности</p>
+                    <p class="footer__legal">Публичная оферта</p>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
 
     <script src="js/vendor/bootstrap.bundle.min.js"></script>
