fix: icon margin

--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                         <a href="mailto:info@womazing.ru" class="footer__contacts-email">info@womazing.ru</a>
                     </div>
                     <div class="footer__contacts-social">
-                        <a href="#" class="footer__contacts-link">
-                          <i class="fab fa-instagram footer__contacts-icon ms-0"></i>
+                        <a href="#" class="footer__contacts-link ms-0">
+                          <i class="fab fa-instagram footer__contacts-icon "></i>
                         </a>
                         <a href="#" class="footer__contacts-link">
                             <i class="fab fa-facebook footer__contacts-icon"></i>
