fix: add script for sale

--- a/shop.html
+++ b/shop.html
@@ -29,7 +29,7 @@
                     <a class="nav-link main-page" href="index.html">Главная</a>
                     </li>
                     <li class="nav-item">
-                    <a class="nav-link shop-page active" href="#">Магазин</a>
+                    <a class="nav-link shop-page active" href="shop.html">Магазин</a>
                     </li>
                     <li class="nav-item">
                     <a class="nav-link brand-page" href="#">О бренде</a>
@@ -135,36 +135,36 @@
             <div class="row shop-items">
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item1.png" alt="Shop Item 1" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Футболка USA</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item2.png" alt="Shop Item 2" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Купальник Glow</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item3.png" alt="Shop Item 3" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Свитшот Sweet Shot</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
@@ -174,36 +174,36 @@
             <div class="row shop-items">
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item1.png" alt="Shop Item 1" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Футболка USA</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item2.png" alt="Shop Item 2" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Купальник Glow</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item3.png" alt="Shop Item 3" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Свитшот Sweet Shot</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
@@ -213,36 +213,36 @@
             <div class="row shop-items">
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item1.png" alt="Shop Item 1" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Футболка USA</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item2.png" alt="Shop Item 2" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Купальник Glow</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
                 </div>
                 <div class="col-4 shop-item">
                     <div class="shop-item__image-container">
-                        <a href="" class="shop-item__link shop-item__link--image">
+                        <a href="product-card.html" class="shop-item__link shop-item__link--image">
                             <img src="img/shop_item3.png" alt="Shop Item 3" class="shop-item__image img-fluid">
                             <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
                         </a>
                     </div>
-                    <a href="" class="shop-item__link shop-item__link--title">
+                    <a href="product-card.html" class="shop-item__link shop-item__link--title">
                         <h4 class="shop-item__title">Свитшот Sweet Shot</h4>
                     </a>
                     <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
@@ -353,5 +353,6 @@
         }).mask(phoneInput);
     </script>
     <script src="js/popup.js"></script>
+    <script src="js/script_for_sale.js"></script>
 </body>
 </html>
