feat: add sizes block

--- a/product-card.html
+++ b/product-card.html
@@ -117,16 +117,29 @@
                     <img src="img/shop_item3.png" alt="Product Image" class="product-card__image img-fluid">
                 </div>
                 <div class="col-6 product-card__info">
-                    <p class="shop-item__price product-card__price"> <span class="sale_price">$129</span><span class="standard_price">$229</span> </p>
-                    <p class="product-card__choose-price">
-                        Выберите размер
-                    </p>
-                    <div class="product-card__sizes">
-                        <button class="btn product-card__size-button active">XS</button>
-                        <button class="btn product-card__size-button">S</button>
-                        <button class="btn product-card__size-button">M</button>
-                        <button class="btn product-card__size-button">L</button>
-                        <button class="btn product-card__size-button">XL</button>
+                    <p class="shop-item__price product-card__price"> <span class="sale_price">$129</span><span class="standard_price small_standard_price">$229</span> </p>
+                    <div class="product-card__sizes-block">
+                        <p class="product-card__choose-price">
+                            Выберите размер
+                        </p>
+                        <div class="product-card__sizes">
+                            <button class="btn product-card__size-button">XS</button>
+                            <button class="btn product-card__size-button active">S</button>
+                            <button class="btn product-card__size-button">M</button>
+                            <button class="btn product-card__size-button">L</button>
+                            <button class="btn product-card__size-button">XL</button>
+                        </div>
+                    </div>
+                    <div class="product-card__colors-block">
+                        <p class="product-card__choose-color">
+                            Выберите цвет
+                        </p>
+                        <div class="product-card__colors">
+                            <button class="btn product-card__color-button active" style="background-color: #F5F5F5;"></button>
+                            <button class="btn product-card__color-button" style="background-color: #000000;"></button>
+                            <button class="btn product-card__color-button" style="background-color: #FF0000;"></button>
+                            <button class="btn product-card__color-button" style="background-color: #00FF00;"></button>
+                        </div>
                     </div>
                 </div>
             </div>
