feat: add choose color block

--- a/product-card.html
+++ b/product-card.html
@@ -135,11 +135,14 @@
                             Выберите цвет
                         </p>
                         <div class="product-card__colors">
-                            <button class="btn product-card__color-button active" style="background-color: #F5F5F5;"></button>
-                            <button class="btn product-card__color-button" style="background-color: #000000;"></button>
-                            <button class="btn product-card__color-button" style="background-color: #FF0000;"></button>
-                            <button class="btn product-card__color-button" style="background-color: #00FF00;"></button>
+                            <button class="btn product-card__color-button" style="background-color: #927876;"></button>
+                            <button class="btn product-card__color-button active" style="background-color: #D4D4D4;"></button>
+                            <button class="btn product-card__color-button" style="background-color: #FD9696;"></button>
+                            <button class="btn product-card__color-button" style="background-color: #FDC796;"></button>
                         </div>
+                    </div>
+                    <div class="product-card__add-to-cart">
+                        
                     </div>
                 </div>
             </div>
