--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                     </li>
                     <li class="footer__nav-item nav-item">
                         <div class="footer__nav-shop">
-                            <a class="footer__nav-link nav-link shop-page" href="#">Магазин</a>
+                            <a class="footer__nav-link nav-link shop-page" href="shop.html">Магазин</a>
                             <ul class="footer__nav-sublist">
                                 <li><a href="#" class ="footer__nav-sublink">Пальто</a></li>
                                 <li><a href="#" class ="footer__nav-sublink">Свитшоты</a></li>
