feat: create quantity input field and controls

--- a/product-card.html
+++ b/product-card.html
@@ -142,6 +142,11 @@
                         </div>
                     </div>
                     <div class="product-card__add-to-cart">
+                        <div class="product-card__quantity-wrapper">
+                            <button class="product-card__quantity-btn product-card__quantity-btn--minus">−</button>
+                            <input type="number" class="product-card__quantity-input" value="1" min="1">
+                            <button class="product-card__quantity-btn product-card__quantity-btn--plus">+</button>
+                        </div>
                         
                     </div>
                 </div>
