--- a/product-card.html
+++ b/product-card.html
@@ -147,7 +147,9 @@
                             <input type="number" class="product-card__quantity-input" value="1" min="1">
                             <button class="product-card__quantity-btn product-card__quantity-btn--plus">+</button>
                         </div>
-                        
+                        <a href="" class="btn shop-button">
+                            Добавить в корзину
+                        </a>
                     </div>
                 </div>
             </div>
