--- a/product-card.html
+++ b/product-card.html
@@ -157,6 +157,104 @@
     </section>
 
 
+    <section class="section related-products">
+        <div class="container">
+            <h2 class="section-title">Связанные товары</h2>
+            <div class="row">
+                <div class="col-4 shop-item">
+                    <div class="shop-item__image-container">
+                        <a href="" class="shop-item__link shop-item__link--image">
+                            <img src="img/shop_item1.png" alt="Shop Item 1" class="shop-item__image img-fluid">
+                            <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
+                        </a>
+                    </div>
+                    <a href="" class="shop-item__link shop-item__link--title">
+                        <h4 class="shop-item__title">Футболка USA</h4>
+                    </a>
+                    <p class="shop-item__price"> <span class="standard_price">$229</span> <span class="sale_price">$129</span></p>
+                </div>
+                <div class="col-4 shop-item">
+                    <div class="shop-item__image-container">
+                        <a href="" class="shop-item__link shop-item__link--image">
+                            <img src="img/shop_item2.png" alt="Shop Item 2" class="shop-item__image img-fluid">
+                            <img src="img/right_arrow.svg" alt="Arrow" class="shop-item__arrow">
+                        </a>
+                    </div>
+                    <a href="" class="shop-item__link shop-item__link--title">
+                        <h4 class="shop-item__title">Купальник Glow</h4>
+                    </a>
+                    <p class="shop-item__price"> <span class="standard_price">$129</span> <span class="sale_price">$129</span></p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <footer class="footer">
+        <div class="container">
+
+            <div class="row">
+                <div class="col-3 footer__info">
+                    <a href="#" class="navbar-brand footer__logo">
+                    <img src="img/logo.svg" alt="Logo" class="logo-img me-2">
+                    <span class="logo-text">Womazing</span>
+                </a>
+                    <p class="footer__legal">© Все права защищены</p>
+                    <p class="footer__legal">Политика конфиденциальности</p>
+                    <p class="footer__legal">Публичная оферта</p>
+                </div>
+                <div class="col-5 footer__nav">
+                    <ul class="footer__nav-list navbar-nav d-flex flex-row gap-4">
+                    <li class="footer__nav-item nav-item">
+                        <a class="footer__nav-link nav-link main-page active" href="#">Главная</a>
+                    </li>
+                    <li class="footer__nav-item nav-item">
+                        <div class="footer__nav-shop">
+                            <a class="footer__nav-link nav-link shop-page" href="shop.html">Магазин</a>
+                            <ul class="footer__nav-sublist">
+                                <li><a href="#" class ="footer__nav-sublink">Пальто</a></li>
+                                <li><a href="#" class ="footer__nav-sublink">Свитшоты</a></li>
+                                <li><a href="#" class ="footer__nav-sublink">Кардиганы</a></li>
+                                <li><a href="#" class ="footer__nav-sublink">Толстовки</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                    <li class="footer__nav-item nav-item">
+                        <a class="footer__nav-link nav-link brand-page" href="#">О бренде</a>
+                    </li>
+                    <li class="footer__nav-item nav-item">
+                        <a class="footer__nav-link nav-link contacts-page" href="#">Контакты</a>
+                    </li>
+                </ul>
+                </div>
+
+                <div class="offset-2 col-2 footer__contacts">
+                    <div class="footer__contacts-phone-and-email">
+                        <a href="tel:+74958235412" class="footer__contacts-phone">+7 (495) 823-54-12</a>
+                        <a href="mailto:info@womazing.ru" class="footer__contacts-email">info@womazing.ru</a>
+                    </div>
+                    <div class="footer__contacts-social">
+                        <a href="#" class="footer__contacts-link ms-0">
+                          <i class="fab fa-instagram footer__contacts-icon "></i>
+                        </a>
+                        <a href="#" class="footer__contacts-link">
+                            <i class="fab fa-facebook footer__contacts-icon"></i>
+                        </a>
+                        <a href="#" class="footer__contacts-link">
+                            <i class="fab fa-twitter footer__contacts-icon"></i>
+                        </a>
+
+                    </div>
+                    <div class="footer__contacts-visa">
+                        <img src="img/visa.png" alt="" class="footer__contacts-visa-img">
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </footer>
+
 
 
 
@@ -174,5 +272,6 @@
     </script>
     <script src="js/popup.js"></script>
     <script src="js/script_for_sale.js"></script>
+    <script src="js/product_card_quantity.js"></script>
 </body>
 </html>
